# skena

./: .gitignore  CMakeLists.txt  README.md  main.cpp
controllers/: CustomerController.cpp  CustomerController.h  IController.h  ProductController.cpp  ProductController.h  TransactionController.cpp  TransactionController.h
data/: customers.txt  products.txt  transactions.txt
docs/puml/: application-flow.puml  class-diagram.puml  customer-management-flow.puml  mvc-overview.puml  product-management-flow.puml  transaction-flow.puml  use-case-diagram.puml
models/: Coffee.cpp  Coffee.h  Customer.cpp  Customer.h  IEntity.h  Product.cpp  Product.h  Snack.cpp  Snack.h  Transaction.cpp  Transaction.h  TransactionItem.cpp  TransactionItem.h
utils/: FileManager.cpp  FileManager.h  IdGenerator.cpp  IdGenerator.h
views/: CustomerView.cpp  CustomerView.h  MainWindow.cpp  MainWindow.h  ProductView.cpp  ProductView.h  TransactionView.cpp  TransactionView.h
